--- a/Product landing Page.html
+++ b/Product landing Page.html
@@ -7,7 +7,7 @@
 <style>
   h2{
      text-align:center;
-	 font-family: 'Lobster', cursive;
+	 font-family: Arial;
 	 font-size:30px;
    } 
   body{
