--- a/Product landing Page.html
+++ b/Product landing Page.html
@@ -4,6 +4,7 @@
 <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 <style>
   h2{
      text-align:center;
